# blockurls-selenium

scripts/: run.sh  setup_chrome_driver.sh
src/: main.py  pyproject.toml
